marker.css
/* START OF MARKER marker0 */
.marker0 {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.4em 0.7em;
    position: relative;
    background: transparent;
    display: inline;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    z-index: 1;
}

.marker0::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0.4em 0.7em;
    background-image: linear-gradient(
    to right,
    rgba(242, 198, 223, 0.3),
    rgba(242, 198, 223, 0.5) 2%,
    rgba(242, 198, 223, 0.1) 95%,
    rgba(242, 198, 223, 0.7)
    );
    clip-path: inset(0 100% 0 0);
    transition: clip-path 0s;
    z-index: -1;
    pointer-events: none;
}

.marker0.animate-highlight::before {
  clip-path: inset(0 0 0 0);
  transition: clip-path 0.4s ease-in-out;
}
/* END OF MARKER marker0 */

/* START OF MARKER marker1 */
.marker1 {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.2em 0.7000000000000001em;
    position: relative;
    background: transparent;
    display: inline;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    z-index: 1;
}

.marker1::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0.2em 0.7000000000000001em;
    background-image: linear-gradient(
    to right,
    rgba(197, 222, 242, 0.3),
    rgba(197, 222, 242, 0.9) 4%,
    rgba(197, 222, 242, 0.1) 94%,
    rgba(197, 222, 242, 0.9)
    );
    clip-path: inset(0 100% 0 0);
    transition: clip-path 0s;
    z-index: -1;
    pointer-events: none;
}

.marker1.animate-highlight::before {
  clip-path: inset(0 0 0 0);
  transition: clip-path 0.5s ease-in-out;
}
/* END OF MARKER marker1 */

/* START OF MARKER marker2 */
.marker2 {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.8em 0.09999999999999995em;
    position: relative;
    background: transparent;
    display: inline;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    z-index: 1;
}

.marker2::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0.8em 0.09999999999999995em;
    background-image: linear-gradient(
    to right,
    rgba(250, 223, 161, 0.1),
    rgba(250, 223, 161, 0.9) 5%,
    rgba(250, 223, 161, 0.3) 95%,
    rgba(250, 223, 161, 0.5)
    );
    clip-path: inset(0 100% 0 0);
    transition: clip-path 0s;
    z-index: -1;
    pointer-events: none;
}

.marker2.animate-highlight::before {
  clip-path: inset(0 0 0 0);
  transition: clip-path 0.7s ease-in-out;
}
/* END OF MARKER marker2 */

/* START OF MARKER marker3 */
.marker3 {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.7em 0.30000000000000004em;
    position: relative;
    background: transparent;
    display: inline;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    z-index: 1;
}

.marker3::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0.7em 0.30000000000000004em;
    background-image: linear-gradient(
    to right,
    rgba(250, 223, 161, 0.3),
    rgba(250, 223, 161, 0.7) 6%,
    rgba(250, 223, 161, 0.1) 97%,
    rgba(250, 223, 161, 0.6)
    );
    clip-path: inset(0 100% 0 0);
    transition: clip-path 0s;
    z-index: -1;
    pointer-events: none;
}

.marker3.animate-highlight::before {
  clip-path: inset(0 0 0 0);
  transition: clip-path 0.5s ease-in-out;
}
/* END OF MARKER marker3 */

/* START OF MARKER marker4 */
.marker4 {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.7em 0.30000000000000004em;
    position: relative;
    background: transparent;
    display: inline;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    z-index: 1;
}

.marker4::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0.7em 0.30000000000000004em;
    background-image: linear-gradient(
    to right,
    rgba(250, 223, 161, 0.1),
    rgba(250, 223, 161, 0.7) 4%,
    rgba(250, 223, 161, 0.1) 94%,
    rgba(250, 223, 161, 0.5)
    );
    clip-path: inset(0 100% 0 0);
    transition: clip-path 0s;
    z-index: -1;
    pointer-events: none;
}

.marker4.animate-highlight::before {
  clip-path: inset(0 0 0 0);
  transition: clip-path 0.6s ease-in-out;
}
/* END OF MARKER marker4 */

/* START OF MARKER marker5 */
.marker5 {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.6em 0.5em;
    position: relative;
    background: transparent;
    display: inline;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    z-index: 1;
}

.marker5::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0.6em 0.5em;
    background-image: linear-gradient(
    to right,
    rgba(250, 223, 161, 0.1),
    rgba(250, 223, 161, 0.8) 4%,
    rgba(250, 223, 161, 0.3) 94%,
    rgba(250, 223, 161, 0.5)
    );
    clip-path: inset(0 100% 0 0);
    transition: clip-path 0s;
    z-index: -1;
    pointer-events: none;
}

.marker5.animate-highlight::before {
  clip-path: inset(0 0 0 0);
  transition: clip-path 0.6s ease-in-out;
}
/* END OF MARKER marker5 */

/* START OF MARKER marker6 */
.marker6 {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.5em 0.5em;
    position: relative;
    background: transparent;
    display: inline;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    z-index: 1;
}

.marker6::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0.5em 0.5em;
    background-image: linear-gradient(
    to right,
    rgba(197, 222, 242, 0.3),
    rgba(197, 222, 242, 0.6) 1%,
    rgba(197, 222, 242, 0.3) 99%,
    rgba(197, 222, 242, 0.5)
    );
    clip-path: inset(0 100% 0 0);
    transition: clip-path 0s;
    z-index: -1;
    pointer-events: none;
}

.marker6.animate-highlight::before {
  clip-path: inset(0 0 0 0);
  transition: clip-path 0.4s ease-in-out;
}
/* END OF MARKER marker6 */

/* START OF MARKER marker7 */
.marker7 {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.7em 0.20000000000000004em;
    position: relative;
    background: transparent;
    display: inline;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    z-index: 1;
}

.marker7::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0.7em 0.20000000000000004em;
    background-image: linear-gradient(
    to right,
    rgba(197, 222, 242, 0.1),
    rgba(197, 222, 242, 0.5) 4%,
    rgba(197, 222, 242, 0.2) 99%,
    rgba(197, 222, 242, 0.7)
    );
    clip-path: inset(0 100% 0 0);
    transition: clip-path 0s;
    z-index: -1;
    pointer-events: none;
}

.marker7.animate-highlight::before {
  clip-path: inset(0 0 0 0);
  transition: clip-path 0.6s ease-in-out;
}
/* END OF MARKER marker7 */

/* START OF MARKER marker8 */
.marker8 {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.3em 0.7999999999999999em;
    position: relative;
    background: transparent;
    display: inline;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    z-index: 1;
}

.marker8::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0.3em 0.7999999999999999em;
    background-image: linear-gradient(
    to right,
    rgba(197, 222, 242, 0.2),
    rgba(197, 222, 242, 0.6) 6%,
    rgba(197, 222, 242, 0.3) 99%,
    rgba(197, 222, 242, 0.7)
    );
    clip-path: inset(0 100% 0 0);
    transition: clip-path 0s;
    z-index: -1;
    pointer-events: none;
}

.marker8.animate-highlight::before {
  clip-path: inset(0 0 0 0);
  transition: clip-path 0.5s ease-in-out;
}
/* END OF MARKER marker8 */

/* START OF MARKER marker9 */
.marker9 {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.5em 0.6em;
    position: relative;
    background: transparent;
    display: inline;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    z-index: 1;
}

.marker9::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0.5em 0.6em;
    background-image: linear-gradient(
    to right,
    rgba(218, 204, 239, 0.3),
    rgba(218, 204, 239, 0.6) 4%,
    rgba(218, 204, 239, 0.1) 96%,
    rgba(218, 204, 239, 0.8)
    );
    clip-path: inset(0 100% 0 0);
    transition: clip-path 0s;
    z-index: -1;
    pointer-events: none;
}

.marker9.animate-highlight::before {
  clip-path: inset(0 0 0 0);
  transition: clip-path 0.6s ease-in-out;
}
/* END OF MARKER marker9 */

